Add new content (2)

--- a/academic-details.html
+++ b/academic-details.html
@@ -112,15 +112,16 @@
               期刊論文 Journal Articles
             </h5>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>楊真宜（2017）。〈新南向政策與東南亞語文人才培育〉《台灣國際研究季刊》第13卷 4期，頁143-174。</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>楊真宜（2017）。〈台灣新住民語言的現況與角色〉《語文與國際研究》第17期，頁127-174。</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi & Lee, Szu-Hsien. The Interaction and Reflection of Soundscape Listening and Local Innovation in Old Zuoying。Sun Yat-sen Journal of Humanities，National Sun Yat-sen University。（審查中）</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2017). Taiwan's New Southbound Policy and Cultivation of Proficient Language Speakers of Southeast Asian Languages. Taiwan International Studies Quarterly, Vol. 13. No. 4, pp. 143-74.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2017). A Study on the Current Situation and Role of the Language of New Immigrants’ Children in Taiwan. Languages and International Studies, 17, pp. 127-74. doi:10.3966/181147172017060017005</span></li>
             </ul>
             
             <h5>
               專書篇章 Book Chapters
             </h5>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Rau, D. Victoria, Hui-Huan Ann Chang, Yin-Sheng Tai, Chen-Yi Yang, Yi-Hui Lin, Chia-Chi Yang & Maa-Neu Dong. (2008) Teaching and learning an endangered language in Taiwan, In Documenting and Revitalizing Austronesian Language. Eds. By D. Victoria Rau & Margaret Florey, special volume for Language Documentation and Conservation, University of Hawai'i. 162-188.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Rau, D. Victoria, Hui-Huan Ann Chang, Yin-Sheng Tai, Chen-Yi Yang, Yi-Hui Lin, Chia-Chi Yang & Maa-Neu Dong. (2008) Teaching and learning an endangered language in Taiwan, In Documenting and Revitalizing Austronesian Language. Eds. By D. Victoria Rau & Margaret Florey, special volume for Language Documentation and Conservation, University of Hawai'i. 162-188. http://nflrc.hawaii.edu/ldc/sp01/ (NSC-95-2411-126-007). ISBN 978-0-8248-3309-1</span></li>
             </ul>
                         
             <h5>
@@ -171,6 +172,19 @@
             </h5>
             <ul>
               <li><i class="bi bi-check-circle"></i> <span>楊真宜 (2018)。〈面臨傳承危機之國家語言〉。文化部國家語言發展法計畫研擬期中報告，國立台中教育大學委託撰寫。</span></li>
+            </ul>
+
+            <h5>
+              研究計畫參與 Research Projects Participation
+            </h5>
+            <ul>             
+              <li><i class="bi bi-check-circle"></i> <span>科技部人文創新與社會實踐計畫【新竹智慧城鄉創生計畫：地方活力與能力建構】(2021) | 國立清華大學 (MOST 108-2420-H-007-010-HS1)</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>科技部人文創新與社會實踐計畫【灣岸創生：高雄過渡社區的記憶再現與創新轉型】(2018-2020) | 國立中山大學 (MOST 107-2420-H-110-004-HS1)</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Grammaticalization Cycles of Nasal Diminutive Suffixes in Chinese【鼻化小稱語法化輪迴】(2015) | 國科會 (NSC102-2410-H-007-023-MY2)</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>A Study of the Indigenous Language Teaching Situation in Elementary and Junior High Schools in Taiwan【臺灣地區國民中小學本土語言教學現況之整合型研究】(2011-2013) | 國家教育研究院 (NAER-100-11-A-1-01-00-2-01)</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Tsing-Hua Corpus and Study of Spoken Chinese: part II【清華語料庫與華語口語研究】(2009-2011) | 教育部 (99N2922E1)</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>The Study of the Diachronic variation of Southern Min (Taiwanese)【台灣閩南語的歷時演變】(2009-2010) | 國科會 (NSC98-2923-H-007-001-MY3)</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Preservation of Endangered Language-Yami【瀕危雅美語之保存暨典藏、E-learning網站建構】(2006-2007) | 國科會、原民會 (NSC95-2411-H-126 -007)</span></li>
             </ul>
         </div>
       </div>
