--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>經歷 Experience</h2>
+        <p>I am interested in the field of sociolinguistics, especially in the subfield, such as language use and shift, language maintenance and loss, language attitude and identity, language revitalization, language policy and planning, etc. I think that language is not only a tool for communication, but also a medium to reflect different cultures, societies and historical backgrounds. Every language has its own uniqueness and should be preserved and passed down.</p>
         <p>(TBD) Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
       </div><!-- End Section Title -->
 
@@ -158,7 +159,13 @@
               <h4>靜宜大學英國語文學系碩士</h4>
               <h6>MA, English Language, Literature and Linguistics</h6>
               <p><em>Providence University, Taichung City, Taiwan.</em></p>
-              <p>Sociolinguistic Variation of Mandarin Chinese /f/ and /hw/ in Taiwan.</p>
+              <p>Thesis: Sociolinguistic Variation of Mandarin Chinese /f/ and /hw/ in Taiwan.</p>
+            </div>
+
+            <div class="resume-item">
+              <h4>中國文化大學英國語文學系學士</h4>
+              <h6>BA, English Language and Literature</h6>
+              <p><em>Chinese Culture University, Taipei City, Taiwan.</em></p>
             </div>
 
             <h3 class="resume-title">Oversea</h3>
@@ -199,23 +206,53 @@
 
             <h3 class="resume-title">Academic Awards</h3>
             <div class="resume-item pb-0">
-              <h4>國科會獎勵博士候選人撰寫博士論文獎</h4>
-              <p><em>（國科會 104-2420-H-007-008-DR）</em></p>
-              <h4>國科會補助博士生赴國外研究「千里馬計畫」</h4>
-              <p><em>（國科會 102-2917-I-007-026）</em></p>
-              <h4>語言學研究生獎學金</h4>
+              <h4>國科會獎勵博士候選人撰寫博士論文獎 Doctoral Dissertation Fellowships for the Humanities and Social Sciences</h4>
+              <p><em>（國科會 104-2420-H-007-008-DR, 2015）</em></p>
+              <h4>國科會補助博士生赴國外研究「千里馬計畫」 Scholarship of the Graduate Students Study Abroad Program</h4>
+              <p><em>（國科會 102-2917-I-007-026, 2012）</em></p>
+              <h4>語言學研究生獎學金 Scholarship of the Linguistic Graduate Students, The Language Training & Testing Center</h4>
               <p><em>（財團法人語言訓練測驗中心LTTC, 2011）</em></p>
+              <h4>文殊文教基金會獎學金</h4>
+              <p><em>（Scholarship, Wenshu culture and education foundation, 2010）</em></p>
+              <h4>文殊文教基金會獎學金</h4>
+              <p><em>（Scholarship, Wenshu culture and education foundation, 2009）</em></p>
               <h4>年度最佳論文獎</h4>
               <p><em>（Award of Annual MA thesis, Providence University, 2008）</em></p>
               <h4>國際榮譽大使</h4>
-              <p><em>（International Honor Ambassador, Office of International Affairs, Providence University）</em></p>
+              <p><em>（International Honor Ambassador, Office of International Affairs, Providence University, 2008）</em></p>
             </div>
 
             <h3 class="resume-title">Licenses & Certificates</h3>
             <div class="resume-item pb-0">
               <h4>中等學校英文科教師證書</h4>
               <p><em>(TBD) Innovative with 3+ years of experience</em></p>
-              <h4>教育部閩南語語言能力認證(中高級)</h4>
+              <h4>教育部閩南語語言能力認證 (中高級)</h4>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+            </div>
+
+            <h3 class="resume-title">Available Courses</h3>
+            <div class="resume-item pb-0">
+              <h4>語言學概論</h4>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <h4>社會語言學導論 (專題)</h4>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <h4>世界語言政策及語言流失</h4>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <h4>田野調查及問卷設計</h4>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <h4>語意（用）學</h4>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <h4>語音學</h4>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <h4>英語及流行音樂</h4>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <h4>TED Talks</h4>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <h4>數位英語</h4>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <h4>台灣語言現況：前世與今生</h4>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <h4>地方創生：理論與實務之應用</h4>
               <p><em>(TBD) Innovative with 3+ years of experience</em></p>
             </div>
 
@@ -247,7 +284,9 @@
               <p><em>Postdoctoral Researcher, Regional Innovation Center, National Tsing Hua University, Hsinchu, Taiwan.</em></p>
               <ul>
                 <li>科技部人文創新與社會實踐計畫</li>
-                <li>(TBD) Recommended and consulted with clients on the most appropriate graphic design</li>
+                <li>新竹智慧城鄉創生計畫：地方活力與能力建構</li>
+                <li>(MOST 108-2420-H-007-010 -HS1)</li>
+                <li>(TBD)</li>
               </ul>
             </div>
 
@@ -267,12 +306,14 @@
               <p><em>Postdoctoral Researcher, Social Engagement Center, National Sun Yat-sen University, Kaohsiung, Taiwan.</em></p>
               <ul>
                 <li>科技部人文創新與社會實踐計畫</li>
-                <li>(TBD) Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>灣岸創生：高雄過渡社區的記憶再現與創新轉型</li>
+                <li>(MOST 107-2420-H-110-004 -HS1)</li>
+                <li>(TBD)</li>
               </ul>
             </div>
 
             <div class="resume-item">
-              <h4>國立新竹教育大學英語教學系 | 兼任講師</h4>
+              <h4>國立新竹教育大學英語教學系 | 講師</h4>
               <h5>2011 - 2013</h5>
               <p><em>Lecturer, Department of English Instruction, National Hsinchu University of Education, Hsinchu, Taiwan.</em></p>
               <ul>
@@ -298,6 +339,45 @@
               <h5>2008 - 2009</h5>
               <ul>
                 <li>(TBD)</li>
+              </ul>
+            </div>
+
+            <h3 class="resume-title">Part-time Experience</h3>
+            <div class="resume-item">
+              <h4>國立清華大學語言學研究所 | 講師</h4>
+              <h5>2011 - 2013</h5>
+              <ul>
+                <li>Pragmatics</li>
+                <li>Sociolinguistics</li>
+                <li>Grammaticalization & Lexicalization</li>
+                <li>Seminar in Pragmatics</li>
+                <li>Discourse Analysis</li>
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>國立清華大學人文社會學系 | 講師</h4>
+              <h5>2012 - 2012</h5>
+              <ul>
+                <li>Introduction to Linguistics</li>
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>國立清華大學外語學系 | 講師</h4>
+              <h5>2010 - 2010</h5>
+              <ul>
+                <li>Contrastive Analysis and Error Analysis</li>
+                <li>Syntax</li>
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>靜宜大學英國語文學系 | 講師</h4>
+              <h5>2007 - 2008</h5>
+              <ul>
+                <li>Linguistics</li>
+                <li>English listening and speaking</li>
               </ul>
             </div>
 
