Add new content (3)

--- a/academic-details.html
+++ b/academic-details.html
@@ -46,8 +46,6 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
       <h1 class="sitename">Chen-Yi Yang</h1>
     </a>
 
@@ -88,7 +86,7 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
-            <h3>學術研究 Research</h3>
+            <h3>學術研究 Academic Research</h3>
             <hr>
             <h5>
               研究計畫 Research Projects
@@ -147,7 +145,7 @@
               <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2010). The Grammaticalizaiton of Bai in Mandarin Chinese: "do something but get nothing" vs. "do nothing but get something". The 43rd International Conference on Sino-Tibetan Languages and Linguistics, Lund University, Sweden.</span></li>
               <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2010). Sociolinguistic Perspectives on Sound Variation of /f/ and /hw/ in Taiwan Mandarin. The 1st International Symposium on Chinese Language and Discourse, UCLA, Los Angeles, USA.</span></li>
               <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2008). Sociolinguistic Variation of Mandarin Chinese /f/ and /hw/ in Taiwan. Paper presented at theNational Conference on Linguistics (NCL 2008), National Chiayi University, Taiwan, May 2-3, 2008.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Rau, D. Victoria, Hui-Huan Ann Chang, Yin-Sheng Tai, Chen-Yi Yang, Yi-Hui Lin, Chia-Chi Yang & Maa-Neu Dong. (2007). Teaching and learning an endangered language in Taiwan. Paper presented at the International Conference on Austronesian Endangered Language Documentation, Providence University, Taiwan, June 5-7, 2007.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Rau, D. Victoria, Hui-Huan Ann Chang, Yin-Sheng Tai, Chen-Yi Yang, Yi-Hui Lin, Chia-Chi Yang & Maa-Neu Dong. (2007). Teaching and learning an endangered language in Taiwan. Paper presented at the International Conference on Austronesian Endangered Language Documentation, Providence University, Taiwan, June 5-7, 2007. (NSC-95-2411-126-007)</span></li>
             </ul>
 
             <h5>
@@ -181,10 +179,11 @@
               <li><i class="bi bi-check-circle"></i> <span>科技部人文創新與社會實踐計畫【新竹智慧城鄉創生計畫：地方活力與能力建構】(2021) | 國立清華大學 (MOST 108-2420-H-007-010-HS1)</span></li>
               <li><i class="bi bi-check-circle"></i> <span>科技部人文創新與社會實踐計畫【灣岸創生：高雄過渡社區的記憶再現與創新轉型】(2018-2020) | 國立中山大學 (MOST 107-2420-H-110-004-HS1)</span></li>
               <li><i class="bi bi-check-circle"></i> <span>Grammaticalization Cycles of Nasal Diminutive Suffixes in Chinese【鼻化小稱語法化輪迴】(2015) | 國科會 (NSC102-2410-H-007-023-MY2)</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>國科會補助博士生赴國外研究成果報告【台灣年輕人的語言能力、使用與認同之探究】(2014) | 國科會 (NSC102-2917-I-007-026)</span></li>
               <li><i class="bi bi-check-circle"></i> <span>A Study of the Indigenous Language Teaching Situation in Elementary and Junior High Schools in Taiwan【臺灣地區國民中小學本土語言教學現況之整合型研究】(2011-2013) | 國家教育研究院 (NAER-100-11-A-1-01-00-2-01)</span></li>
               <li><i class="bi bi-check-circle"></i> <span>Tsing-Hua Corpus and Study of Spoken Chinese: part II【清華語料庫與華語口語研究】(2009-2011) | 教育部 (99N2922E1)</span></li>
               <li><i class="bi bi-check-circle"></i> <span>The Study of the Diachronic variation of Southern Min (Taiwanese)【台灣閩南語的歷時演變】(2009-2010) | 國科會 (NSC98-2923-H-007-001-MY3)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Preservation of Endangered Language-Yami【瀕危雅美語之保存暨典藏、E-learning網站建構】(2006-2007) | 國科會、原民會 (NSC95-2411-H-126 -007)</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Preservation of Endangered Language-Yami【瀕危雅美語之保存暨典藏、E-learning網站建構】(2006-2007) | 國科會、原民會 (NSC95-2411-H-126 -007) http://yamiproject.cs.pu.edu.tw/yami , http://yamiproject.cs.pu.edu.tw/elearn/?&lang=zhtw</span></li>
             </ul>
         </div>
       </div>
