--- a/teaching-details.html
+++ b/teaching-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>楊真宜 Chen-Yi Yang (Special)</title>
+  <title>楊真宜 Chen-Yi Yang (Teaching)</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -71,31 +71,47 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Special Details</h1>
+        <h1 class="mb-2 mb-lg-0">Teaching Details</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Special Details</li>
+            <li class="current">Teaching Details</li>
           </ol>
         </nav>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Special Details Section -->
+    <!-- Teaching Details Section -->
     <section id="service-details" class="service-details section">
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
             <h5>
-              委員擔任
+              教學經歷 Teaching Experiences
             </h5>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span></span></li>
+              <li><i class="bi bi-check-circle"></i> <span><b>[2017 Fall, TA]</b> Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-check-circle"></i> <span><b>[2016, Fall, TA]</b> Sociolinguistics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-check-circle"></i> <span><b>[2015 Spring, TA]</b> Grammaticalization & Lexicalization, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-check-circle"></i> <span><b>[2012 Fall, Lecturer]</b> Reading and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-check-circle"></i> <span><b>[2012 Fall, Lecturer]</b> English Proficiency Development, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-check-circle"></i> <span><b>[2012 Fall, TA]</b> Seminar in Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-check-circle"></i> <span><b>[2012 Spring, Lecturer]</b> Speech and Communication in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-check-circle"></i> <span><b>[2012 Spring, Lecturer]</b> Grammar and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-check-circle"></i> <span><b>[2012 Spring, TA]</b> Introduction to Linguistics, Interdisciplinary Program of Humanities and Social Sciences, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-check-circle"></i> <span><b>[2011 Fall, Lecturer]</b> Listening and Speaking in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-check-circle"></i> <span><b>[2011 Fall, Lecturer]</b> Reading and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-check-circle"></i> <span><b>[2011 Fall, TA]</b> Discourse Analysis, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-check-circle"></i> <span><b>[2011 Spring, TA]</b> Seminar in Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-check-circle"></i> <span><b>[2010 Fall, TA]</b> Contrastive Analysis and Error Analysis, Graduate Institute of Foreign Language and Literature, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-check-circle"></i> <span><b>[2010 Spring, TA]</b> Syntax, Department of Foreign Language and Literature, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-check-circle"></i> <span><b>[2007 - 2008, TA]</b> English listening and speaking (Undergraduate), Providence University, Taiwan</span></li>
+              <li><i class="bi bi-check-circle"></i> <span><b>[2007 - 2008, TA]</b> Linguistics, Department of English Language, Literature and Linguistics, Providence University, Taiwan</span></li>
             </ul>
         </div>
       </div>
 
-    </section><!-- /Special Details Section -->
+    </section><!-- /Teaching Details Section -->
 
   </main>
 
