Fix bugs for current content

--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
           <div class="col-lg-8 content">
             <h2>Assistant Professor &amp; Sociolinguist</h2>
             <p class="fst-italic py-3">
-              (TBD) Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua. Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+              (TBD) I am interested in the field of sociolinguistics, especially in the subfield, such as language use and shift, language maintenance and loss, language attitude and identity, language revitalization, language policy and planning, etc. I think that language is not only a tool for communication, but also a medium to reflect different cultures, societies and historical backgrounds. Every language has its own uniqueness and should be preserved and passed down.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -137,7 +135,6 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>經歷 Experience</h2>
-        <p>I am interested in the field of sociolinguistics, especially in the subfield, such as language use and shift, language maintenance and loss, language attitude and identity, language revitalization, language policy and planning, etc. I think that language is not only a tool for communication, but also a medium to reflect different cultures, societies and historical backgrounds. Every language has its own uniqueness and should be preserved and passed down.</p>
         <p>(TBD) Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
       </div><!-- End Section Title -->
 
@@ -206,12 +203,15 @@
 
             <h3 class="resume-title">Academic Awards</h3>
             <div class="resume-item pb-0">
-              <h4>國科會獎勵博士候選人撰寫博士論文獎 Doctoral Dissertation Fellowships for the Humanities and Social Sciences</h4>
+              <h4>國科會獎勵博士候選人撰寫博士論文獎</h4>
+              <p><em>Doctoral Dissertation Fellowships for the Humanities and Social Sciences</em></p>
               <p><em>（國科會 104-2420-H-007-008-DR, 2015）</em></p>
-              <h4>國科會補助博士生赴國外研究「千里馬計畫」 Scholarship of the Graduate Students Study Abroad Program</h4>
+              <h4>國科會補助博士生赴國外研究「千里馬計畫」</h4>
+              <p><em>Scholarship of the Graduate Students Study Abroad Program</em></p>
               <p><em>（國科會 102-2917-I-007-026, 2012）</em></p>
-              <h4>語言學研究生獎學金 Scholarship of the Linguistic Graduate Students, The Language Training & Testing Center</h4>
-              <p><em>（財團法人語言訓練測驗中心LTTC, 2011）</em></p>
+              <h4>語言學研究生獎學金</h4>
+              <p><em>Scholarship of the Linguistic Graduate Students, The Language Training & Testing Center</em></p>
+              <p><em>（財團法人語言訓練測驗中心 LTTC, 2011）</em></p>
               <h4>文殊文教基金會獎學金</h4>
               <p><em>（Scholarship, Wenshu culture and education foundation, 2010）</em></p>
               <h4>文殊文教基金會獎學金</h4>
