--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
       <ul>
         <li><a href="index.html" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
+        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Experiences</a></li>
+        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Guides</a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Contributions</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
@@ -129,7 +129,7 @@
 
     </section><!-- /About Section -->
 
-    <!-- Resume Section -->
+    <!-- Experiences Section -->
     <section id="resume" class="resume section light-background">
 
       <!-- Section Title -->
@@ -148,7 +148,7 @@
               <h4>國立清華大學語言學研究所博士</h4>
               <h6>Ph.D., Linguistics</h6>
               <p><em>National Tsing Hua University, Hsinchu City, Taiwan.</em></p>
-              <p>Dissertation: A Study of Taiwan Junior High Students' Language Proficiency, Use, and Attitude: Mandarin Chinese, Indigenous Languages, and English.</p>
+              <p>[Dissertation] A Study of Taiwan Junior High Students' Language Proficiency, Use, and Attitude: Mandarin Chinese, Indigenous Languages, and English.</p>
               <p>(TBD)</p>
             </div>
 
@@ -156,7 +156,7 @@
               <h4>靜宜大學英國語文學系碩士</h4>
               <h6>MA, English Language, Literature and Linguistics</h6>
               <p><em>Providence University, Taichung City, Taiwan.</em></p>
-              <p>Thesis: Sociolinguistic Variation of Mandarin Chinese /f/ and /hw/ in Taiwan.</p>
+              <p>[Thesis] Sociolinguistic Variation of Mandarin Chinese /f/ and /hw/ in Taiwan.</p>
             </div>
 
             <div class="resume-item">
@@ -182,21 +182,21 @@
             <h3 class="resume-title">Academic Expertise</h3>
             <div class="resume-item pb-0">
               <h4>語言學</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>語意學</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>語用學</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>語言政策</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>田野調查</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>英語教學</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>社會語言學</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>應用語言學</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>地方創生與社會實踐</h4>
               <p><em>（社區營造、跨領域整合與應用）</em></p>
             </div>
@@ -225,35 +225,35 @@
             <h3 class="resume-title">Licenses & Certificates</h3>
             <div class="resume-item pb-0">
               <h4>中等學校英文科教師證書</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>教育部閩南語語言能力認證 (中高級)</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
             </div>
 
             <h3 class="resume-title">Available Courses</h3>
             <div class="resume-item pb-0">
               <h4>語言學概論</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>社會語言學導論 (專題)</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>世界語言政策及語言流失</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>田野調查及問卷設計</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>語意（用）學</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>語音學</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>英語及流行音樂</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>TED Talks</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>數位英語</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>台灣語言現況：前世與今生</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
               <h4>地方創生：理論與實務之應用</h4>
-              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <p><em>(TBD)</em></p>
             </div>
 
           </div>
@@ -385,9 +385,77 @@
         </div>
       </div>
 
-    </section><!-- /Resume Section -->
+    </section><!-- /Experiences Section -->
 
-    <!-- Portfolio Section -->
+    <!-- services Section -->
+    <section id="services" class="services section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>成就 Achievements</h2>
+        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+      </div><!-- End Section Title -->
+
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
+            <div>
+              <h4 class="title"><a href="academic-details.html" class="stretched-link">學術研究</a></h4>
+              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            </div>
+          </div>
+          <!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
+            <div>
+              <h4 class="title"><a href="special-details.html" class="stretched-link">特殊經歷</a></h4>
+              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
+            <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
+            <div>
+              <h4 class="title"><a href="teaching-details.html" class="stretched-link">教學經歷</a></h4>
+              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
+            <div>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Magni Dolores</a></h4>
+              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
+            <div>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Nemo Enim</a></h4>
+              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
+            <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
+            <div>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Eiusmod Tempor</a></h4>
+              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            </div>
+          </div><!-- End Service Item -->
+
+        </div>
+
+      </div>
+
+    </section><!-- /services Section -->
+
+    <!-- Guides Section -->
     <section id="portfolio" class="portfolio section light-background">
 
       <!-- Section Title -->
@@ -408,7 +476,7 @@
             <li data-filter=".filter-books">Books</li>
             <li data-filter="">競賽指導</li>
             <li data-filter="">專題指導</li>
-          </ul><!-- End Portfolio Filters -->
+          </ul>
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
@@ -556,81 +624,13 @@
               </div>
             </div>
 
-          </div><!-- End Portfolio Container -->
+          </div><!-- End Guides Container -->
 
         </div>
 
       </div>
 
-    </section><!-- /Portfolio Section -->
-
-    <!-- services Section -->
-    <section id="services" class="services section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>貢獻 Contributions</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-      </div><!-- End Section Title -->
-
-      <div class="container">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
-            <div>
-              <h4 class="title"><a href="academic-details.html" class="stretched-link">學術研究</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-            </div>
-          </div>
-          <!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
-            <div>
-              <h4 class="title"><a href="special-details.html" class="stretched-link">特殊經歷</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
-            <div>
-              <h4 class="title"><a href="teaching-details.html" class="stretched-link">教學經歷</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
-            <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
-            <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
-            <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
-            <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-            </div>
-          </div><!-- End Service Item -->
-
-        </div>
-
-      </div>
-
-    </section><!-- /services Section -->
+    </section><!-- /Guides Section -->
 
     <!-- Contact Section -->
     <section id="contact" class="contact section light-background">
